--- a/e-basa/src/pages/login.html
+++ b/e-basa/src/pages/login.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="https://fonts.cdnfonts.com/css/happy-school" rel="stylesheet">
+
 <style>
 body {
   margin: 0;
   padding: 0;
-  height: 360px;
-  background-image: url('G:/Project/React/e-basa/public/assets/imgs/loginbg.png');
+  height: 425px;
+  background-image: url('C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/public/assets/imgs/loginbg.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: 'Happy School', sans-serif;
+
 }
 
 .centered-image {
@@ -69,14 +73,18 @@ button {
 </head>
 <body>
   <div class="clouds">
-    <img src="G:/Project/React/e-basa/public/assets/imgs/clouds1.png" class="clouds-img">
+    <img src="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/public/assets/imgs/clouds1.png" class="clouds-img">
   </div>
   
-<img src="G:/Project/React/e-basa/public/assets/imgs/nav-logo.png" alt="Centered Image" class="centered-image">
+<img src="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/public/assets/imgs/nav-logo.png" alt="Centered Image" class="centered-image">
 
 <div class="button-container">
+    <a href="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/src/pages/register.html">
     <button type="button"> CREATE AN ACCOUNT </button>
+    </a>
+    <a href="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/src/pages/signin.html">
     <button type="button"> LOG IN </button>
+    </a>
 </div>
 
 </body>
