--- a/e-basa/src/pages/register.html
+++ b/e-basa/src/pages/register.html
@@ -7,8 +7,8 @@
 body {
   margin: 0;
   padding: 0;
-  height: 360px;
-  background-image: url('G:/Project/React/e-basa/public/assets/imgs/loginbg.png');
+  height: 425px;
+  background-image: url('C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/public/assets/imgs/loginbg.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -113,10 +113,12 @@ input {
 </head>
 <body>
   <div class="clouds">
-    <img src="G:/Project/React/e-basa/public/assets/imgs/clouds1.png" class="clouds-img">
+    <img src="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/public/assets/imgs/clouds1.png" class="clouds-img">
   </div>
 
-<img src="G:/Project/React/e-basa/public/assets/imgs/nav-logo.png" alt="Centered Image" class="centered-image">
+  <a href="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/src/pages/login.html">
+    <img src="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/public/assets/imgs/nav-logo.png" alt="Centered Image" class="centered-image">
+    </a>
 
 <div class="container">
   <div class="registration-container">
@@ -133,8 +135,8 @@ input {
   
 
   <div class="under-reg">
-    <button type="submit">LOG IN</button>
-    <p>already have an account ? <a href="#">Click here</a></p>
+    <button type="submit">Submit</button>
+    <p>already have an account ?  <a href="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/src/pages/signin.html">Click here</a></p>
   </div>
 </div>
 </body>
