--- a/e-basa/src/pages/signin.html
+++ b/e-basa/src/pages/signin.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.cdnfonts.com/css/happy-school" rel="stylesheet">
+
 <style>
 body {
   margin: 0;
   padding: 0;
-  height: 360px;
-  background-image: url('G:/Project/React/e-basa/public/assets/imgs/loginbg.png');
+  height: 425px;
+  background-image: url('C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/public/assets/imgs/loginbg.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  font-family: 'Happy School', sans-serif;
+
 }
 
 .centered-image {
@@ -80,16 +84,20 @@ input {
 </head>
 <body>
   <div class="clouds">
-    <img src="G:/Project/React/e-basa/public/assets/imgs/clouds1.png" class="clouds-img">
+    <img src="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/public/assets/imgs/clouds1.png" class="clouds-img">
   </div>
 
-<img src="G:/Project/React/e-basa/public/assets/imgs/nav-logo.png" alt="Centered Image" class="centered-image">
+  <a href="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/src/pages/login.html">
+<img src="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/public/assets/imgs/nav-logo.png" alt="Centered Image" class="centered-image">
+</a>
 
 <div class="login-container">
   <input type="text" id="username" placeholder="Username" name="username" required>
   <input type="password" id="password" placeholder="Password" name="password" required>
+  <a href="http://localhost:3000/Home">
   <button type="submit">LOG IN</button>
-  <p>Dont’t have an account ? <a href="#">Click here</a></p>
+</a>
+  <p>Dont’t have an account ?  <a href="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/src/pages/register.html">Click here</a></p>
 </div>
 </body>
 </html>
