--- a/e-basa/src/pages/login.html
+++ b/e-basa/src/pages/login.html
@@ -8,7 +8,7 @@ body {
   margin: 0;
   padding: 0;
   height: 425px;
-  background-image: url('C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/public/assets/imgs/loginbg.png');
+  background-image: url('G:/Project/React/e-basa/public/assets/imgs/loginbg.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -73,16 +73,16 @@ button {
 </head>
 <body>
   <div class="clouds">
-    <img src="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/public/assets/imgs/clouds1.png" class="clouds-img">
+    <img src="G:/Project/React/e-basa/public/assets/imgs/clouds1.png" class="clouds-img">
   </div>
   
-<img src="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/public/assets/imgs/nav-logo.png" alt="Centered Image" class="centered-image">
+<img src="G:/Project/React/e-basa/public/assets/imgs/nav-logo.png" alt="Centered Image" class="centered-image">
 
 <div class="button-container">
-    <a href="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/src/pages/register.html">
+    <a href="G:/Project/React/e-basa/src/pages/register.html">
     <button type="button"> CREATE AN ACCOUNT </button>
     </a>
-    <a href="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/src/pages/signin.html">
+    <a href="G:/Project/React/e-basa/src/pages/signin.html">
     <button type="button"> LOG IN </button>
     </a>
 </div>
