--- a/e-basa/src/pages/register.html
+++ b/e-basa/src/pages/register.html
@@ -7,8 +7,8 @@
 body {
   margin: 0;
   padding: 0;
-  height: 425px;
-  background-image: url('C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/public/assets/imgs/loginbg.png');
+  height: 360px;
+  background-image: url('G:/Project/React/e-basa/public/assets/imgs/loginbg.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -95,6 +95,7 @@ input {
 }
 
 .Fcol {
+ padding: 10px;
  
 }
 
@@ -104,9 +105,7 @@ input {
   /* Adjust spacing between inputs */
 }
 
-.Scol {
 
-}
 
 .Scol input{
   width: 350px;
@@ -114,9 +113,7 @@ input {
   /* Adjust spacing between inputs */
 }
 
-.Lcol {
- 
-}
+
 
 .Lcol input{
   width: 350px;
@@ -126,12 +123,10 @@ input {
 </head>
 <body>
   <div class="clouds">
-    <img src="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/public/assets/imgs/clouds1.png" class="clouds-img">
+    <img src="G:/Project/React/e-basa/public/assets/imgs/clouds1.png" class="clouds-img">
   </div>
 
-  <a href="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/src/pages/login.html">
-    <img src="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/public/assets/imgs/nav-logo.png" alt="Centered Image" class="centered-image">
-    </a>
+<img src="G:/Project/React/e-basa/public/assets/imgs/nav-logo.png" alt="Centered Image" class="centered-image">
 
 <div class="container">
   <div class="registration-container">
@@ -155,8 +150,10 @@ input {
 </div>
 
   <div class="under-reg">
-    <button type="submit">Submit</button>
-    <p>already have an account ?  <a href="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/src/pages/signin.html">Click here</a></p>
+    <a href="G:/Project/React/e-basa/src/pages/signin.html">
+    <button type="submit">LOG IN</button>
+  </a>
+    <p>already have an account ? <a href="G:/Project/React/e-basa/src/pages/signin.html">Click here</a></p>
   </div>
 </div>
 </body>
