--- a/e-basa/src/pages/signin.html
+++ b/e-basa/src/pages/signin.html
@@ -8,7 +8,7 @@ body {
   margin: 0;
   padding: 0;
   height: 425px;
-  background-image: url('C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/public/assets/imgs/loginbg.png');
+  background-image: url('G:/Project/React/e-basa/public/assets/imgs/loginbg.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -84,11 +84,11 @@ input {
 </head>
 <body>
   <div class="clouds">
-    <img src="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/public/assets/imgs/clouds1.png" class="clouds-img">
+    <img src="G:/Project/React/e-basa/public/assets/imgs/clouds1.png" class="clouds-img">
   </div>
 
-  <a href="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/src/pages/login.html">
-<img src="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/public/assets/imgs/nav-logo.png" alt="Centered Image" class="centered-image">
+  <a href="G:/Project/React/e-basa/src/pages/login.html">
+<img src="G:/Project/React/e-basa/public/assets/imgs/nav-logo.png" alt="Centered Image" class="centered-image">
 </a>
 
 <div class="login-container">
@@ -97,7 +97,7 @@ input {
   <a href="http://localhost:3000/Home">
   <button type="submit">LOG IN</button>
 </a>
-  <p>Dont’t have an account ?  <a href="C:/Users/slend/Desktop/mine/projects/E-BASA/e-basa/src/pages/register.html">Click here</a></p>
+  <p>Dont’t have an account ?  <a href="G:/Project/React/e-basa/src/pages/register.html">Click here</a></p>
 </div>
 </body>
 </html>
