mali nanaman ba ako

--- a/e-basa/src/pages/htmls/gamepage3.html
+++ b/e-basa/src/pages/htmls/gamepage3.html
@@ -89,20 +89,22 @@ body {
       <img src="G:/Project/React/e-basa/public/assets/imgs/ingame/menu.png" alt="menu" id="menu-image">
     </div> 
     <div class="botnav-bt" href="#home">
+      <a href="G:/Project/React/e-basa/src/pages/htmls/gamepage2.html">
       <img src="G:/Project/React/e-basa/public/assets/imgs/ingame/prev.png" alt="prev" id="prev-image">
+      </a>
     </div> 
     <div class="botnav-bt" href="#sound">
       <img src="G:/Project/React/e-basa/public/assets/imgs/ingame/pause.png" alt="pause" id="pause-image">
     </div>
     <div class="botnav-bt" href="#setting">
-      <a href="G:/Project/React/e-basa/src/pages/htmls/gamepage2.html">
+      <a href="#">
       <img src="G:/Project/React/e-basa/public/assets/imgs/ingame/next.png" alt="next" id="next-image">
-    </a>
+      </a>
     </div> 
   </div>
 
   <div class="guidelines">
-    <img src="G:/Project/React/e-basa/public/assets/imgs/ingame/1.png">
+    <img src="G:/Project/React/e-basa/public/assets/imgs/ingame/3.png">
   </div>
 </body>
 </html>
